Added anchor to header arrow-link

--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -7,7 +7,7 @@
   <title>Tanatos</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7cOpen+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
@@ -40,9 +40,9 @@
             </div>
           </div>
         </div>
-        <a href="#" class="icon-arrow-down header-anchor"></a>
+        <a href="#company-specs" class="icon-arrow-down header-anchor"></a>
       </section>
-      <section class="company-specs">
+      <section class="company-specs" id="company-specs">
         <div class="container">
           <ul class="list-items">
             <li>
@@ -114,7 +114,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                    <button type="button" class="button button_2">SHOW PROJECT</button>
+                    <button type="button" class="button button_2">show project</button>
                   </div>
                 </div>
               </a>
@@ -126,7 +126,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <button type="button" class="button button_2">SHOW PROJECT</button>
+                    <button type="button" class="button button_2">show project</button>
                   </div>
                 </div>
               </a>
@@ -138,7 +138,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <button type="button" class="button button_2">SHOW PROJECT</button>
+                    <button type="button" class="button button_2">show project</button>
                   </div>
                 </div>
               </a>
@@ -150,7 +150,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <button type="button" class="button button_2">SHOW PROJECT</button>
+                    <button type="button" class="button button_2">show project</button>
                   </div>
                 </div>
               </a>
@@ -162,7 +162,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <button type="button" class="button button_2">SHOW PROJECT</button>
+                    <button type="button" class="button button_2">show project</button>
                   </div>
                 </div>
               </a>
@@ -174,7 +174,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <button type="button" class="button button_2">SHOW PROJECT</button>
+                    <button type="button" class="button button_2">show project</button>
                   </div>
                 </div>
               </a>
@@ -196,8 +196,8 @@
               </div>
             </li>
           </ul>
-          <a href="#" class="left-arrow-button icon-left-arrow"></a>
-          <a href="#" class="right-arrow-button icon-right-arrow"></a>
+          <a href="#" class="arrow-button left-arrow-button icon-left-arrow"></a>
+          <a href="#" class="arrow-button right-arrow-button icon-right-arrow"></a>
         </div>
       </section>
       <section class="user-inf-section">
@@ -209,7 +209,7 @@
           <ul class="user-inf-content">
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_1.png" alt="Image Description" width="" height="">
+                <img src="img/user-info-img_1.png" alt="Image Description" width="235" height="284">
               </div>
               <div class="item-description">
                 <h3>catherina gail</h3>
@@ -229,7 +229,7 @@
             </li>
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_2.png" alt="Image Description" width="" height="">
+                <img src="img/user-info-img_2.png" alt="Image Description" width="262" height="315">
               </div>
               <div class="item-description">
                 <h3>harvey rube</h3>
@@ -249,7 +249,7 @@
             </li>
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_3.png" alt="Image Description" width="" height="">
+                <img src="img/user-info-img_3.png" alt="Image Description" width="236" height="284">
               </div>
               <div class="item-description">
                 <h3>janet pris</h3>
@@ -269,7 +269,7 @@
             </li>
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_4.png" alt="Image Description" width="" height="">
+                <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
               </div>
               <div class="item-description">
                 <h3>kevin ward</h3>
@@ -303,7 +303,6 @@
             </li>
           </ul>
         </div>
-      </div>
       </section>
       <section class="send-section" style="background-image: url('img/send-section-back.png');">
         <div class="container send-block-wrapper">
