Added drop menu

--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -24,6 +24,42 @@
             <span class="button-icon"></span>
           </div>
           <div class="burger-menu-drop">
+            <div class="drop-content">
+              <ul class="nav-menu">
+                <li>
+                  <a href="#">home</a>
+                </li>
+                <li>
+                  <a href="#">about us</a>
+                </li>
+                <li>
+                    <a href="#">services</a>
+                </li>
+                <li>
+                  <a href="#">our works</a>
+                </li>
+                <li>
+                  <a href="#">contact</a>
+                </li>
+              </ul>
+              <ul class="soc-icons">
+                <li>
+                  <a href="#" class="icon-facebook facebook"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-twitter twitter"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-google google"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-dribble dribble"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-behance behance"></a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -209,7 +245,9 @@
           <ul class="user-inf-content">
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_1.png" alt="Image Description" width="235" height="284">
+                <a href="#">
+                  <img src="img/user-info-img_1.png" alt="Image Description" width="235" height="284">
+                </a>
               </div>
               <div class="item-description">
                 <h3>catherina gail</h3>
@@ -229,7 +267,9 @@
             </li>
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_2.png" alt="Image Description" width="262" height="315">
+                <a href="#">
+                  <img src="img/user-info-img_2.png" alt="Image Description" width="262" height="315">
+                </a>
               </div>
               <div class="item-description">
                 <h3>harvey rube</h3>
@@ -249,7 +289,9 @@
             </li>
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_3.png" alt="Image Description" width="236" height="284">
+                <a href="#">
+                  <img src="img/user-info-img_3.png" alt="Image Description" width="236" height="284">
+                </a>
               </div>
               <div class="item-description">
                 <h3>janet pris</h3>
@@ -269,7 +311,9 @@
             </li>
             <li class="user-info-item">
               <div class="item-image">
-                <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
+                <a href="#">
+                  <img src="img/user-info-img_4.png" alt="Image Description" width="236" height="284">
+                </a>
               </div>
               <div class="item-description">
                 <h3>kevin ward</h3>
