--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <header class="header add">
+    <header class="header">
       <div class="container header-wrapper">
         <div class="logo">
           <a href="#">
