--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <header class="header add">
+    <header class="header">
       <div class="container header-wrapper">
         <div class="logo">
           <a href="#">
@@ -77,9 +77,32 @@
               <button type="button" class="button">hire us</button>
               <button type="button" class="button">our works</button>
             </div>
+            <div class="dropdown-block">
+              <div class="content-head">
+                <h2>hire <span class="caption-element">us</span></h2>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              </div>
+              <form action="#" class="send-form">
+                <div class="form-row">
+                  <div class="form-col">
+                    <input type="email" placeholder="Your Email">
+                  </div>
+                  <div class="form-col">
+                    <input type="text" placeholder="Subject">
+                  </div>
+                  <div class="form-col-lg">
+                    <textarea placeholder="Your Message"></textarea>
+                  </div>
+                </div>
+                <div class="form-col-lg">
+                  <button type="button" class="button button_2">send message</button>
+                </div>
+              </form>
+              <a href="#" class="close-btn">X</a>
+            </div>
           </div>
         </div>
-        <a href="#" class="scroll-btn-section"><i class="icon-arrow-down"></i></a>
+        <a href="#company-specs" class="scroll-btn-section"><i class="icon-arrow-down"></i></a>
       </section>
       <section class="company-specs" id="company-specs">
         <div class="container">
