--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -66,7 +66,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="main">
       <section class="info-section" style="background-image: url('img/photo-background.png');">
         <div class="container">
           <div class="info-section-content">
@@ -76,29 +76,6 @@
             <div class="buttons-block">
               <button type="button" class="button">hire us</button>
               <button type="button" class="button">our works</button>
-            </div>
-            <div class="dropdown-block">
-              <div class="content-head">
-                <h2>hire <span class="caption-element">us</span></h2>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-              </div>
-              <form action="#" class="send-form">
-                <div class="form-row">
-                  <div class="form-col">
-                    <input type="email" placeholder="Your Email">
-                  </div>
-                  <div class="form-col">
-                    <input type="text" placeholder="Subject">
-                  </div>
-                  <div class="form-col-lg">
-                    <textarea placeholder="Your Message"></textarea>
-                  </div>
-                </div>
-                <div class="form-col-lg">
-                  <button type="button" class="button button_2">send message</button>
-                </div>
-              </form>
-              <a href="#" class="close-btn">X</a>
             </div>
           </div>
         </div>
@@ -249,7 +226,7 @@
                 <blockquote cite="#">
                   <q>These guys are incredible! I get my project in 10 days and it was awesome! Very good service!
                     Highly recommended!</q>
-                  <cite href="#">John Sm</cite>
+                  <cite href="#">John Smith</cite>
                 </blockquote>
               </div>
             </li>
@@ -379,40 +356,38 @@
               laborum</p>
           </div>
           <form action="#" class="send-form">
-            <div class="form-row">
-              <div class="form-col">
+            <div class="row">
+              <div class="form-row">
                 <input type="email" placeholder="Your Email">
               </div>
-              <div class="form-col">
+              <div class="form-row">
                 <input type="text" placeholder="Subject">
               </div>
             </div>
-            <div class="form-row">
-              <div class="form-col-lg">
+            <div class="row">
+              <div class="form-row-lg">
                 <textarea placeholder="Your Message"></textarea>
               </div>
             </div>
-            <div class="form-row">
-              <div class="form-row">
-                <button type="submit" class="button button_2">hire us</button>
-                <ul class="soc-icons">
-                  <li>
-                    <a href="#" class="icon-facebook facebook"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-twitter twitter"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-google google"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-dribble dribble"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-behance behance"></a>
-                  </li>
-                </ul>
-              </div>
+            <div class="row">
+              <button type="submit" class="button button_2">hire us</button>
+              <ul class="soc-icons">
+                <li>
+                  <a href="#" class="icon-facebook facebook"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-twitter twitter"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-google google"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-dribble dribble"></a>
+                </li>
+                <li>
+                  <a href="#" class="icon-behance behance"></a>
+                </li>
+              </ul>
             </div>
           </form>
         </div>
@@ -424,6 +399,32 @@
         <span class="design">designed by<a href="#">symu<span class="link-element">.</span>com</a></span>
       </div>
     </footer>
+    <div class="overlay">
+      <div class="popup">
+          <div class="content-head">
+            <h2>hire <span class="caption-element">us</span></h2>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          </div>
+          <form action="#" class="send-form">
+            <div class="row">
+              <div class="form-row">
+                <input type="email" placeholder="Your Email">
+              </div>
+              <div class="form-row">
+                <input type="text" placeholder="Subject">
+              </div>
+              <div class="form-row-lg">
+                <textarea placeholder="Your Message"></textarea>
+              </div>
+            </div>
+            <div class="form-row-lg">
+              <button type="button" class="button button_2">send message</button>
+            </div>
+          </form>
+          <a href="#" class="close-btn">X</a>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="js/main.js"></script>
 </body>
