delete excess div

--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -226,7 +226,7 @@
                 <blockquote cite="#">
                   <q>These guys are incredible! I get my project in 10 days and it was awesome! Very good service!
                     Highly recommended!</q>
-                  <cite href="#">John Smith</cite>
+                  <cite>John Smith</cite>
                 </blockquote>
               </div>
             </li>
@@ -425,7 +425,6 @@
         </div>
       </div>
     </div>
-  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
