--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -122,14 +122,14 @@
             </li>
           </ul>
         </div>
-        <div class="form-section" style="background-image: url('img/sub-section-back.png');">
+        </section>
+        <section class="form-section" style="background-image: url('img/sub-section-back.png');">
           <div class="container newsletter-form-wrapper">
             <form class="newsletter-form">
               <input type="email" placeholder="Enter Your email adress for newsletter">
               <button type="submit" class="button button_2">subscribe</button>
             </form>
           </div>
-        </div>
       </section>
       <section class="company-products">
         <div class="container products-block-wrapper">
@@ -140,64 +140,76 @@
           </div>
           <ul class="content-items">
             <li>
-              <div class="item-wrapper">
-                <img src="img/products-image_1.png" alt="Image Description" width="360" height="360">
-                <div class="item-description">
-                  <h3>ABAZOO WEBSITE</h3>
-                  <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                  <button type="button" class="button button_2">show project</button>
+              <a href="#">
+                <div class="item-wrapper">
+                  <img src="img/products-image_1.png" alt="Image Description" width="360" height="360">
+                  <div class="item-description">
+                    <h3>ABAZOO WEBSITE</h3>
+                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                    <span class="button button_2">show project</span>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="item-wrapper">
-                <img src="img/products-image_2.png" alt="Image Description" width="360" height="360">
-                <div class="item-description">
-                  <h3>ABAZOO WEBSITE</h3>
-                  <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <button type="button" class="button button_2">show project</button>
+              <a href="#">
+                <div class="item-wrapper">
+                  <img src="img/products-image_2.png" alt="Image Description" width="360" height="360">
+                  <div class="item-description">
+                    <h3>ABAZOO WEBSITE</h3>
+                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <span class="button button_2">show project</span>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="item-wrapper">
-                <img src="img/products-image_3.png" alt="Image Description" width="360" height="360">
-                <div class="item-description">
-                  <h3>ABAZOO WEBSITE</h3>
-                  <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <button type="button" class="button button_2">show project</button>
+              <a href="#">
+                <div class="item-wrapper">
+                  <img src="img/products-image_3.png" alt="Image Description" width="360" height="360">
+                  <div class="item-description">
+                    <h3>ABAZOO WEBSITE</h3>
+                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <span class="button button_2">show project</span>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="item-wrapper">
-                <img src="img/products-image_4.png" alt="Image Description" width="360" height="360">
-                <div class="item-description">
-                  <h3>ABAZOO WEBSITE</h3>
-                  <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <button type="button" class="button button_2">show project</button>
+              <a href="#">
+                <div class="item-wrapper">
+                  <img src="img/products-image_4.png" alt="Image Description" width="360" height="360">
+                  <div class="item-description">
+                    <h3>ABAZOO WEBSITE</h3>
+                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <span class="button button_2">show project</span>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="item-wrapper">
-                <img src="img/products-image_5.png" alt="Image Description" width="360" height="360">
-                <div class="item-description">
-                  <h3>ABAZOO WEBSITE</h3>
-                  <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <button type="button" class="button button_2">show project</button>
+              <a href="#">
+                <div class="item-wrapper">
+                  <img src="img/products-image_5.png" alt="Image Description" width="360" height="360">
+                  <div class="item-description">
+                    <h3>ABAZOO WEBSITE</h3>
+                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <span class="button button_2">show project</sapn>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
             <li>
-              <div class="item-wrapper">
-                <img src="img/products-image_6.png" alt="Image Description" width="360" height="360">
-                <div class="item-description">
-                  <h3>ABAZOO WEBSITE</h3>
-                  <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <button type="button" class="button button_2">show project</button>
+              <a href="#">
+                <div class="item-wrapper">
+                  <img src="img/products-image_6.png" alt="Image Description" width="360" height="360">
+                  <div class="item-description">
+                    <h3>ABAZOO WEBSITE</h3>
+                    <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <span type="button" class="button button_2">show project</span>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
           </ul>
           <button type="button" class="button">show more</button>
@@ -387,32 +399,30 @@
         <span class="design">designed by<a href="#">symu<span class="link-element">.</span>com</a></span>
       </div>
     </footer>
-    <div class="overlay">
-      <div class="popup">
-          <div class="content-head">
-            <h2>hire <span class="caption-element">us</span></h2>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <form action="#" class="send-form">
-            <div class="row">
-              <div class="form-row">
-                <input type="email" placeholder="Your Email">
-              </div>
-              <div class="form-row">
-                <input type="text" placeholder="Subject">
-              </div>
-              <div class="form-row-lg">
-                <textarea placeholder="Your Message"></textarea>
-              </div>
-            </div>
-            <div class="form-row-lg">
-              <button type="button" class="button button_2">send message</button>
-            </div>
-          </form>
-          <a href="#" class="close-btn">X</a>
-        </div>
+    <div class="popup">
+      <div class="content-head">
+        <h2>hire <span class="caption-element">us</span></h2>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
       </div>
+      <form action="#" class="send-form">
+        <div class="row">
+          <div class="form-row">
+            <input type="email" placeholder="Your Email">
+          </div>
+          <div class="form-row">
+            <input type="text" placeholder="Subject">
+          </div>
+          <div class="form-row-lg">
+            <textarea placeholder="Your Message"></textarea>
+          </div>
+        </div>
+        <div class="form-row-lg">
+          <button type="button" class="button button_2">send message</button>
+        </div>
+      </form>
+      <a href="#" class="close-btn">X</a>
     </div>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
