Added js to fullscreen menu and for popup

--- a/markup/dev/index.html
+++ b/markup/dev/index.html
@@ -46,19 +46,29 @@
               </ul>
               <ul class="soc-icons">
                 <li>
-                  <a href="#" class="icon-facebook facebook"></a>
+                  <a href="#">
+                    <i class="icon-facebook facebook"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-twitter twitter"></a>
+                  <a href="#">
+                    <i class="icon-twitter twitter"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-google google"></a>
+                  <a href="#">
+                    <i class="icon-google google"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-dribble dribble"></a>
+                  <a href="#">
+                    <i class="icon-dribble dribble"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-behance behance"></a>
+                  <a href="#">
+                    <i class="icon-behance behance"></i>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -74,7 +84,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua</p>
             <div class="buttons-block">
-              <button type="button" class="button">hire us</button>
+              <button type="button" class="button button-opener">hire us</button>
               <button type="button" class="button">our works</button>
             </div>
           </div>
@@ -194,7 +204,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <span class="button button_2">show project</sapn>
+                    <span class="button button_2">show project</span>
                   </div>
                 </div>
               </a>
@@ -206,7 +216,7 @@
                   <div class="item-description">
                     <h3>ABAZOO WEBSITE</h3>
                     <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <span type="button" class="button button_2">show project</span>
+                    <span class="button button_2">show project</span>
                   </div>
                 </div>
               </a>
@@ -215,26 +225,28 @@
           <button type="button" class="button">show more</button>
         </div>
       </section>
-      <section class="carousel-section" style="background-image: url('img/carousel-section-back.png');">
+     <!--  <section class="carousel-section" style="background-image: url('img/carousel-section-back.png');">
         <div class="container">
-          <ul class="carousel-items">
-            <li>
-              <div class="items-image">
-                <img src="img/carousel-image_1.png" alt="Image Description" width="120" height="120">
+          <div class="carousel-items slideshow">
+            <div class="slideset">
+              <div class="slide">
+                <div class="items-image">
+                  <img src="img/carousel-image_1.png" alt="Image Description" width="120" height="120">
+                </div>
+                <div class="items-description">
+                  <blockquote cite="#">
+                    <q>These guys are incredible! I get my project in 10 days and it was awesome! Very good service!
+                      Highly recommended!</q>
+                    <cite>John Smith</cite>
+                  </blockquote>
+                </div>
               </div>
-              <div class="items-description">
-                <blockquote cite="#">
-                  <q>These guys are incredible! I get my project in 10 days and it was awesome! Very good service!
-                    Highly recommended!</q>
-                  <cite>John Smith</cite>
-                </blockquote>
-              </div>
-            </li>
-          </ul>
-          <a href="#" class="arrow-button left-arrow-button icon-left-arrow"></a>
-          <a href="#" class="arrow-button right-arrow-button icon-right-arrow"></a>
+            </div>
+          </div>
+          <a href="#" class="btn-prev arrow-button left-arrow-button icon-left-arrow"></a>
+          <a href="#" class="btn-next arrow-button right-arrow-button icon-right-arrow"></a>
         </div>
-      </section>
+      </section> -->
       <section class="user-inf-section">
         <div class="container user-inf-wrapper">
           <div class="content-head">
@@ -252,16 +264,22 @@
               <div class="item-description">
                 <h3>catherina gail</h3>
                 <ul class="soc-icons">
-                  <li>
-                    <a href="#" class="icon-facebook"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-twitter"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-google"></a>
-                  </li>
-                </ul>
+                    <li>
+                      <a href="#">
+                        <i class="icon-facebook"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="icon-twitter"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="icon-google"></i>
+                      </a>
+                    </li>
+                  </ul>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
               </div>
             </li>
@@ -274,16 +292,22 @@
               <div class="item-description">
                 <h3>harvey rube</h3>
                 <ul class="soc-icons">
-                  <li>
-                    <a href="#" class="icon-facebook"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-twitter"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-google"></a>
-                  </li>
-                </ul>
+                    <li>
+                      <a href="#">
+                        <i class="icon-facebook"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="icon-twitter"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="icon-google"></i>
+                      </a>
+                    </li>
+                  </ul>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
               </div>
             </li>
@@ -297,13 +321,19 @@
                 <h3>janet pris</h3>
                 <ul class="soc-icons">
                   <li>
-                    <a href="#" class="icon-facebook"></a>
+                    <a href="#">
+                      <i class="icon-facebook"></i>
+                    </a>
                   </li>
                   <li>
-                    <a href="#" class="icon-twitter"></a>
+                    <a href="#">
+                      <i class="icon-twitter"></i>
+                    </a>
                   </li>
                   <li>
-                    <a href="#" class="icon-google"></a>
+                    <a href="#">
+                      <i class="icon-google"></i>
+                    </a>
                   </li>
                 </ul>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
@@ -318,16 +348,22 @@
               <div class="item-description">
                 <h3>kevin ward</h3>
                 <ul class="soc-icons">
-                  <li>
-                    <a href="#" class="icon-facebook"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-twitter"></a>
-                  </li>
-                  <li>
-                    <a href="#" class="icon-google"></a>
-                  </li>
-                </ul>
+                    <li>
+                      <a href="#">
+                        <i class="icon-facebook"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="icon-twitter"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="icon-google"></i>
+                      </a>
+                    </li>
+                  </ul>
                 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
               </div>
             </li>
@@ -373,19 +409,29 @@
               <button type="submit" class="button button_2">hire us</button>
               <ul class="soc-icons">
                 <li>
-                  <a href="#" class="icon-facebook facebook"></a>
+                  <a href="#">
+                    <i class="icon-facebook facebook"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-twitter twitter"></a>
+                  <a href="#">
+                    <i class="icon-twitter twitter"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-google google"></a>
+                  <a href="#">
+                    <i class="icon-google google"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-dribble dribble"></a>
+                  <a href="#">
+                    <i class="icon-dribble dribble"></i>
+                  </a>
                 </li>
                 <li>
-                  <a href="#" class="icon-behance behance"></a>
+                  <a href="#">
+                    <i class="icon-behance behance"></i>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -420,9 +466,11 @@
           <button type="button" class="button button_2">send message</button>
         </div>
       </form>
-      <a href="#" class="close-btn">X</a>
+      <a href="#" class="close-btn button-opener">X</a>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="js/main.js"></script>
+  
 </body>
 </html>
